Update project.clj