@@ -5,7 +5,61 @@
             :url "http://www.eclipse.org/legal/epl-v10.html"}
 
   :min-lein-version "2.7.1"
-}
+
+  :dependencies [[org.clojure/clojure "1.9.0"]
+                 [org.clojure/clojurescript "1.9.229"]
+                 [devcards "0.2.3"]
+                 [sablono "0.7.4"]
+
+                 [com.alchemyislands/patterning "0.5.4-SNAPSHOT"]
+                 [reagent "0.7.0"]
+
+                 ;; need to specify this for sablono
+                 ;; when not using devcards
+                 [cljsjs/react "15.3.1-0"]
+                 [cljsjs/react-dom "15.3.1-0"]
+                 #_[org.omcljs/om "1.0.0-alpha46"]
+                 #_[reagent "0.6.0"]
+                 ]
+  :jvm-opts ["--add-modules" "java.xml.bind"]
+  :plugins [[lein-figwheel "0.5.9"]
+            [lein-cljsbuild "1.1.5" :exclusions [org.clojure/clojure]]]
+
+  :clean-targets ^{:protect false} ["resources/public/js/compiled"
+                                    "target"]
+
+  :source-paths ["src"]
+
+  :cljsbuild {
+              :builds [{:id "devcards"
+                        :source-paths ["src"]
+                        :figwheel { :devcards true  ;; <- note this
+                                   ;; :open-urls will pop open your application
+                                   ;; in the default browser once Figwheel has
+                                   ;; started and complied your application.
+                                   ;; Comment this out once it no longer serves you.
+                                   :open-urls ["http://localhost:3449/cards.html"]}
+                        :compiler { :main       "present.core"
+                                    :asset-path "js/compiled/devcards_out"
+                                    :output-to  "resources/public/js/compiled/present_devcards.js"
+                                    :output-dir "resources/public/js/compiled/devcards_out"
+                                    :source-map-timestamp true }}
+                       {:id "dev"
+                        :source-paths ["src"]
+                        :figwheel true
+                        :compiler {:main       "present.core"
+                                   :asset-path "js/compiled/out"
+                                   :output-to  "resources/public/js/compiled/present.js"
+                                   :output-dir "resources/public/js/compiled/out"
+                                   :source-map-timestamp true }}
+                       {:id "prod"
+                        :source-paths ["src"]
+                        :compiler {:main       "present.core"
+                                   :asset-path "js/compiled/out"
+                                   :output-to  "resources/public/js/compiled/present.js"
+                                   :optimizations :advanced}}]}
+
+  :figwheel { :css-dirs ["resources/public/css"] }
 
   :profiles {:dev {:dependencies [[binaryage/devtools "0.9.2"]
                                   [figwheel-sidecar "0.5.9"]
